# config

./: .Xresources  .gitignore  .zshrc  README.md  _aliases.sh  _functions.sh
.config/nvim/: .netrwhist  autocommands.vim  config_vars.vim  init.vim  mappings.vim  my-nvim-hs.cabal  nvim.hs  plugins.vim  stack.yaml
.config/nvim/.stack-work/ghci/35e954fb/: cabal_macros.h
.config/nvim/.stack-work/ghci/6f6ae061/: cabal_macros.h
.config/nvim/.stack-work/install/x86_64-linux/nightly-2019-03-13/8.6.4/flag-cache/: aeson-1.4.2.0-ERv395NU1912B7lkxWmNep  ansi-terminal-0.9-Are373YnKXZHl6o5h7aQxW  ansi-wl-pprint-0.6.8.2-CvBXQDbGTg55Wqj1gljTuj  async-2.2.1-4fWSSJ8SFccIxQJVItkRnX  attoparsec-0.13.2.2-Kc8YHTBaLzX3KcfOIV2ovC  base-compat-0.10.5-FRXoAxOVtbG2qLNIZm1tTr  base-orphans-0.8-9c3aMxqS7QbGl4Ot5i8lwK  basement-0.0.10-2z2JaOuy7fVLQL3Bi1dEbr  case-insensitive-1.2.0.11-GGYU9CY9cs88wywgwHVKC6  cereal-0.5.8.0-6rtfJLvNbgP66iuaPkuxJC  cereal-conduit-0.8.0-EraGMhTBVwn5l7Hpm1QafO  colour-2.3.4-BYzTQyKoQ9LK29pbkBo2SY  conduit-1.3.1.1-8xqWHhQAZr477ClK39RcTg  data-default-0.7.1.1-LTjBtjLvKGK2UBTHiM9KVF  data-default-class-0.1.2.0-FeIQ5tLoVZBHMSgrT9zptQ  data-default-instances-containers-0.0.1-9yvw8HF06tiAXuxm5U8KjO  data-default-instances-dlist-0.0.1-LIRSqaQLAnD9zvxNpqPc5w  (+50 more)
.config/nvim/lib/: HaskellFormatImport.hs
.config/nvim/lib/HaskellFormatImport/: Plugin.hs
.config/nvim/nvim-hs/: HaskellFormatImport.hs
.config/nvim/nvim-hs/HaskellFormatImport/: Plugin.hs
.config/nvim/nvim-hs/Neovim/Example/: Plugin.hs
.config/nvim/snips/: haskell.snippets
.config/nvim/syntax/: exo.vim
(+15 files in other folders)
