name:                my-nvim-hs
version:             0.1.0.0
synopsis:            Haskell Neovim plugins
description:         Personal project to manage plugin dependencies.
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
-- Take a license that you like. Only relevant if you want to make your config
-- used by other people.
--license:             BSD3
--license-file:        LICENSE
category:            Neovim
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

executable my-nvim-hs
  main-is:             nvim.hs
  hs-source-dirs:      ., nvim-hs
  other-modules:       Neovim.Example.Plugin
                     , Neovim.Example.Plugin.Fibonacci
                     , Neovim.Example.Plugin.Random
                     , HaskellFormatImport.Plugin
                     , HaskellFormatImport.Plugin
                     , HaskellFormatImport
  build-depends:       base >= 4.7 && < 5
                     , nvim-hs >= 2 && < 3
                     -- The dependencies below are only needed for the example plugin
                     , random
                     , unliftio
                     , bytestring
                     , text
                     , basement
  default-language:    Haskell2010
